--- a/index.html
+++ b/index.html
@@ -1,14 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.min.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./bootstrap-5.0.2-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="./bootstrap-5.0.2-dist/css/bootstrap.min.css">
+    <title>Shoping Women</title>
 </head>
+
 <body>
-    <h1>Hello world </h1>
+    <!-- SITE-HEADER -->
+    <header class="header">
+        <div class="container header__container">
+            <nav class="header__navbar">
+                <button class="header__menu-btn">
+                    <img src="./img/navbar-menu.png" alt="navbar-menu">
+                </button>
+                <ul class="header__menu">
+                    <li class="header__menu--item">
+                        <a href="#">NEW</a>
+                    </li>
+                    <li class="header__menu--item">
+                        <a href="#">КАТАЛОГ</a>
+                    </li>
+                    <li class="header__menu--item">
+                        <a href="#">О НАС</a>
+                    </li>
+                </ul>
+                <a href="./index.html">
+                    <img src="./img/logo.svg" alt="logo">
+                </a>
+                <div class="header__selectlang--box">
+                    <select name="lang" id="lang" class="header__select--lang">
+                        <option value="ru">RU</option>
+                        <option value="uz">UZ</option>
+                    </select>
+                    <select name="lang" id="lang" class="header__select--lang">
+                        <option value="uah">UAH</option>
+                        <option value="en">EN</option>
+                    </select>
+                </div>
+                <ul class="header__list">
+                    <li class="header__list--item">
+                        <form action="#" method="GET">
+                            <img src="./img/search.png" alt="">
+                            <input type="search" class="header__search--input">
+                        </form>
+                    </li>
+                    <li class="header__list--item">
+                        <button class="header__contact--btn">
+                            <img src="./img/contact.png" alt="contact">
+                        </button>
+                    </li>
+                    <li class="header__list--item">
+                        <button class="header__like--btn">
+                            <img src="./img/likes.png" alt="likes">
+                        </button>
+                    </li>
+                    <li class="header__list--item">
+                        <button>
+                            <img src="./img/basket.png" alt="basket">
+                        </button>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <!-- END-SITE-HEADER -->
+    <script src="./bootstrap-5.0.2-dist/js/bootstrap.js"></script>
+    <script src="./bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
+
 </html>
