--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.min.css">
-    <link rel="stylesheet" href="./bootstrap-5.0.2-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="./bootstrap-5.0.2-dist/css/bootstrap.min.css">
     <title>Shoping Women</title>
 </head>
 
 <body>
     <!-- SITE-HEADER -->
+    <div class="lds-hourglass"></div>
+
     <header class="header">
         <div class="container header__container">
             <nav class="header__navbar">
@@ -69,9 +69,8 @@
             </nav>
         </div>
     </header>
+
     <!-- END-SITE-HEADER -->
-    <script src="./bootstrap-5.0.2-dist/js/bootstrap.js"></script>
-    <script src="./bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
 
