header btn joined

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 
 <body>
+    <!-- <div class="lds-hourglass"></div> -->
+
     <!-- SITE-HEADER -->
-    <div class="lds-hourglass"></div>
 
     <header class="header">
         <div class="container header__container">
@@ -67,6 +68,24 @@
                     </li>
                 </ul>
             </nav>
+
+            <nav class="header__navigation--addtion">
+                <button class="header__navigation--bar">
+                    <img src="./img/bars.png" alt="bars">
+                </button>
+                <ul class="header__menu--addition">
+                    <li class="header__menu--addition__item">
+                        <a href="#">ОПЛАТА И ДОСТАВКА</a>
+                    </li>
+                    <li class="header__menu--addition__item">
+                        <a href="#">УСЛОВИЯ ВОЗВРАТА</a>
+                    </li>
+                    <li class="header__menu--addition__item">
+                        <a href="#">КОНТАКТЫ</a>
+                    </li>
+                </ul>
+            </nav>
+
         </div>
     </header>
 
