--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Shoping Women</title>
 </head>
 
@@ -46,15 +48,29 @@
                 </div>
                 <ul class="header__list">
                     <li class="header__list--item">
-                        <form action="#" method="GET">
-                            <img src="./img/search.png" alt="">
-                            <input type="search" class="header__search--input">
+                        <form action="#" method="GET" class="header__search--form">
+                            <img src="./img/search.png" alt="" header__search--img>
+                            <input type="search" class="header__search--input" placeholder="Biror narsa qidiring">
                         </form>
                     </li>
-                    <li class="header__list--item">
-                        <button class="header__contact--btn">
-                            <img src="./img/contact.png" alt="contact">
+                    <li class="header__list--item header__registration--item">
+                        <button class="header__registration--btn">
+                            <img src="./img/registration.png" alt="registration" class="header__registration--bars">
                         </button>
+                        <div class="header__registration--box">
+                            <img src="./img/registration-bars.png" alt="registration-bars">
+                            <p class="header__registration--text">Авторизация</p>
+                            <form action="#" method="POST" class="header__registration--form">
+                                <input type="email" class="header__registration--email" placeholder="Ваш e-mail*">
+                                <input type="password" placeholder="Ваш пароль*">
+                                <div class="header__registration--wrapper">
+                                    <a href="#">Забыли пароль?</a>
+                                    <a href="#">Нет аккаунта?</a>
+                                </div>
+                                <button class="header__registration--btn">Войти</button>
+                            </form>
+                        </div>
+                        <div class="overlay"></div>
                     </li>
                     <li class="header__list--item">
                         <button class="header__like--btn">
@@ -89,8 +105,12 @@
         </div>
     </header>
 
+
     <!-- END-SITE-HEADER -->
     <script src="./js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
